[tool.poetry]
name = "ip_reveal"
version = "1"
description = ""
authors = ["Taylor B. <tayjaybabee@gmail.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.8"
inspy_logger = "2.0.0a6"
PySimpleGUIQt = "^0.35.0"
requests = "^2.25.0"
inspyred_print = "^1.0"
humanize = "^3.1.0"
PySimpleGUI = "^4.30.0"
simpleaudio = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
